Route sign in button on home page

--- a/src/index.css
+++ b/src/index.css
@@ -38,9 +38,6 @@ p {
     font-weight: 200;
 }
 
-.sign-in {
-    font-size: 1.4rem;
-}
 
 .btn-default {
     background-color: #595c3f;
@@ -122,6 +119,19 @@ nav a:hover {
 .right-col-container p {
     margin-top: 2rem;
     font-weight: lighter;
+}
+
+.col .btn-light:last-child {
+    background-color: #595c3f;
+    color: #FFF;
+    margin-top: 1rem;
+    font-size: 1rem;
+}
+
+.col .btn-light:last-child:hover {
+    background-color: #bcbfa3;
+    color: white;
+    border: none;
 }
 
 /* Plant Info */
@@ -245,13 +255,9 @@ footer a:hover {
 }
 
 .quiz-question-container {
-    /* Center the div  */
     margin: 0 auto;
     margin-top: 4rem;
-
-    /* Dimensions  */
     width: 70%;
-    /* Can be in percentage also. */
     background-color: #A0A66F;
     padding: 8rem;
     border-radius: 16px;
@@ -451,7 +457,6 @@ cite {
 
 @media (min-width: 320px) {
     /* Plant Info */
-
     .plant-info-img img {
         max-height: 240px;
         max-width: 240px;
@@ -470,13 +475,11 @@ cite {
     }
 
     /* Quiz Result Page */
-
     .plant-picture img {
         display: none;
     }
 
     /* Quiz Page */
-
     .quiz-contain {
         position: absolute;
         top: 70%;
@@ -491,20 +494,7 @@ cite {
     }
 
     .quiz-question-container {
-        /* Center the div  */
-        margin: 0 auto;
-        margin-top: 4rem;
-    
-        /* Dimensions  */
-        width: 70%;
-        /* Can be in percentage also. */
-        background-color: #A0A66F;
         padding: 3rem;
-        border-radius: 16px;
-        color: white;
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px,
-            rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
-        text-align: center;
     }
 
     .questionText {
@@ -547,21 +537,8 @@ cite {
     }
 
     /* Quiz Page */
-    .quiz-question-container {
-        /* Center the div  */
-        margin: 0 auto;
-        margin-top: 4rem;
-    
-        /* Dimensions  */
-        width: 70%;
-        /* Can be in percentage also. */
-        background-color: #A0A66F;
+    .quiz-question-container {  
         padding: 8rem;
-        border-radius: 16px;
-        color: white;
-        box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px,
-            rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
-        text-align: center;
     }
 
     .questionText {
@@ -596,7 +573,6 @@ cite {
 @media (min-width: 768px) {
 
     /* Home Page */
-
     .backdrop-container {
         background-image: url('../public/img/bg-image.jpg');
         background-size: cover;
@@ -604,7 +580,6 @@ cite {
     }
 
     /* Explore Page */
-
     .plant-img img {
         width: 78%;
         height: 78%;
@@ -633,7 +608,6 @@ cite {
     }
 
     /* Plant Info Page */
-
     .plant-info-heading {
         margin-top: 1rem;
         margin-left: 1rem;
@@ -699,6 +673,20 @@ cite {
         align-self: center;
     }
 
+    .calendar {
+        width: 80%;
+        margin-top: 0rem;
+        height: 100%;
+    }
+
+    .compose-calendar {
+        display:flex;
+    }
+
+    .add-event {
+        height:fit-content;
+    }
+
     /* Quiz Result Pages */
     .quiz-img-column {
         float: left;
@@ -715,26 +703,15 @@ cite {
         font-size: 1.5rem;
     }
 
-    .calendar {
-        width: 80%;
-        margin-top: 0rem;
-        height: 100%;
+    /* Home Page */
+    .col .btn-light:last-child {
+        font-size: 1.2rem;
     }
-
-    .compose-calendar {
-        display:flex;
-    }
-
-    .add-event {
-        height:fit-content;
-    }
-
 }
 
 @media (min-width: 1200px) {
 
     /* Explore Page */
-
     .search-bar {
         padding-right: 28rem;
     }
@@ -752,7 +729,6 @@ cite {
     }
 
     /* Home Page */
-
     .plant {
         max-width: 3.2rem;
         max-height: 3.2rem;
@@ -786,7 +762,6 @@ cite {
     }
 
     /* Plant Info Page */
-
     .plant-info-img img {
         max-width: 500px;
         max-height: 500px;
